--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.">
-	<title>Space race. The Game</title>
+	<title>Space racing. The Game</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
